[gd_scene load_steps=8 format=3 uid="uid://cxnpivvtt56ye"]

[ext_resource type="Texture2D" uid="uid://d3a5h2cvfetlf" path="res://Session-01/assets/hammer-00.png" id="1_rvhki"]
[ext_resource type="Texture2D" uid="uid://bsxd5qyombh4x" path="res://Session-01/assets/hammer-01.png" id="2_84tep"]
[ext_resource type="Texture2D" uid="uid://dnblvwa4g5kbi" path="res://Session-01/assets/hammer-02.png" id="3_28exo"]
[ext_resource type="Script" path="res://Session-01/scripts/hammer.gd" id="4_w8glb"]
[ext_resource type="AudioStream" uid="uid://ctii4iaj1fjc6" path="res://Session-01/assets/bonk.mp3" id="5_0l3jp"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cg4mc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_rvhki")
}, {
"duration": 1.0,
"texture": ExtResource("2_84tep")
}, {
"duration": 1.0,
"texture": ExtResource("3_28exo")
}, {
"duration": 1.0,
"texture": ExtResource("2_84tep")
}, {
"duration": 1.0,
"texture": ExtResource("1_rvhki")
}],
"loop": false,
"name": &"hammer",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ug32x"]
size = Vector2(11, 20)

[node name="Hammer" type="AnimatedSprite2D"]
position = Vector2(39, 23)
sprite_frames = SubResource("SpriteFrames_cg4mc")
animation = &"hammer"
script = ExtResource("4_w8glb")

[node name="Area2Dhammer2" type="Area2D" parent="."]

[node name="CollisionShape2Dhammer" type="CollisionShape2D" parent="Area2Dhammer2"]
position = Vector2(6, 4)
rotation = 0.785397
shape = SubResource("RectangleShape2D_ug32x")

[node name="Bonk2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0l3jp")

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="area_entered" from="Area2Dhammer2" to="." method="_on_area_2d_area_entered"]
